--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: #111;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 h1, h2, h3, h4 {
@@ -10,6 +11,11 @@ h1, h2, h3, h4 {
   color: #222;
 }
 
+h1 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+  letter-spacing: 35px;
+}
 h3 {
   font-size: 1.5em;
 }
@@ -31,10 +37,16 @@ section {
 p {
   color: #333;
   font-weight: 100;
+ 
+
 }
 
 .light {
   font-weight: 100;
+}
+
+a:hover {  
+color: #ce6628;
 }
 
 /* Pure Responsive Nav */
@@ -107,6 +119,7 @@ p {
 
 .pure-menu {
   font-size: 1.5em;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .pure-menu-heading, .pure-menu-link {
